--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 <body>
 
     <div id="header">
-        <input id="searchinput" type="text" placeholder="Search...">
+        <div>
+            <h1>Search movies</h1>
+        </div>
+        <div>
+            <input id="searchinput" type="text" placeholder="Search...">
 
-        <button>
-            Search 
-        </button>
+            <button>
+                Search 
+            </button>
+        </div>
     </div>
 
 
